Added logic to services and repositories. Added exceptions and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Blog/Blog.Api/bin/Debug/netcoreapp3.1
 /Blog/Blog.Common/bin/Debug/netstandard2.0
 /Blog/Blog.Services/bin/Debug/netstandard2.0
+/Blog/Blog.Api/Blog.Api.csproj.user
