--- a/Blog/Blog.Api/appsettings.json
+++ b/Blog/Blog.Api/appsettings.json
@@ -2,5 +2,11 @@
   "ConnectionStrings": {
     "BlogDbConnection": "Data Source=localhost;Initial Catalog=Blog;Integrated Security=SSPI;"
   },
-  "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  }
 }
